Fix code whitespace wrap bug on iOS safari

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,10 @@
     @apply bg-zinc-700;
   }
 
+  table code {
+    white-space: nowrap;
+  }
+
   h1,
   h2,
   h3,
